     as a result, they should accept true non-zero values, "on", "yes" or "true"
     strings; and "0", "off", "no" or "false" are considered false values.
   * A variable string's length can now be obtained with [set_variable] 
     string_length=
   * Implemented [variable] boolean_not_equals= for simmetry with [variable]
     boolean_equals=
   * [modify_side] can set AI parameters now, using the [ai] syntax implemented
     for [side] declarations (patch #984)
   * allow 100% defense instead of cutting off at 99% (debian bug #467253)
 * miscellaneous and bug fixes:
   * wmlxgettext now print some context information about the strings
     extracted (patch #993)
   * Fixed network_worker to span at least one thread (bug #11238)
   * more comprehensive terrain type naming to avoid confusing displays such
     as 'Road (Grassland)' or 'Impassable mountain (Cavewall)'
     This also applies to the WML keys used in the stats :
     - grassland becomes flat
     - tundra becomes frozen
     - canyon becomes unwalkable
     - cavewall becomes impassable
   * added VICTORY_AND_DEFEAT_MUSIC macro - not wiring it in in trunk
     content, in the hope that we get engine support for this soon, but it's
     here to use in the meantime
   * remove an ancient wml update program which has been obsoleted by wmllint
   * added the boost regex dependency
   * added the sdl-ttf dependency
   * default gender selection now works correctly for units with
     only a female variant.  Fixes bug #11197.
   * Fixed a border case of unit portrait advancement on which generic portraits
     would be treated as character-specific (affected female Elvish Archer line;
     it also theoretically affected units with [variation]s using different
     portraits)
   * allow configure to be started from directories other as the top dir
     (patch #1002)
   * added -Werror -Wno-unused -Wno-sign-compare to the default compiler
     flags, can be disabled with --disable-strict-compilation.
