@@ -17,6 +17,8 @@ Version 1.5.0-svn:
      string_length=
    * Implemented [variable] boolean_not_equals= for simmetry with [variable]
      boolean_equals=
+   * Implemented [store_map_dimensions], which saves the map size in a variable
+     with values 'height' and 'width'
    * [modify_side] can set AI parameters now, using the [ai] syntax implemented
      for [side] declarations (patch #984)
    * allow 100% defense instead of cutting off at 99% (debian bug #467253)
